// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cards component add cards click snaphot 1`] = `
<div
  className="cards-form"
>
  <ul
    className="cards-list-ul"
  >
    <li
      key="0"
    >
      <div
        className="cards-tile"
      >
        <div
          className="update-card"
        >
          <UpdateCards
            _id="432e39hzdo08aqcdgd"
            cards={
              Object {
                "432e39hzdo08aqcdgd": Object {
                  "_id": "432e39hzdo08aqcdgd",
                  "cardslistId": "2skdde39hzdo08aqcdgd",
                  "text": "eat dinner",
                },
                "5643e2858vpjxd7wjp": Object {
                  "_id": "5643e2858vpjxd7wjp",
                  "cardslistId": "kd5o3ve2858vpjxd7wjp",
                  "text": "masking tape",
                },
                "6532opubteu021ato": Object {
                  "_id": "6532opubteu021ato",
                  "cardslistId": "14w43d4opubteu021ato",
                  "text": "tea tree oil",
                },
              }
            }
            cardslist={
              Object {
                "14w43d4opubteu021ato": Object {
                  "_id": "14w43d4opubteu021ato",
                  "boardId": "346rfdghsdhteu021ato",
                  "cards": Array [
                    "6532opubteu021ato",
                  ],
                  "title": "Bedfordshire Illinois Liaison",
                },
                "2skdde39hzdo08aqcdgd": Object {
                  "_id": "2skdde39hzdo08aqcdgd",
                  "boardId": "46mdujckqs45tkdsh2jdxz",
                  "cards": Array [
                    "432e39hzdo08aqcdgd",
                  ],
                  "title": "XML Health",
                },
                "kd5o3ve2858vpjxd7wjp": Object {
                  "_id": "kd5o3ve2858vpjxd7wjp",
                  "boardId": "kd5o3ve2858qggfqw4rtfda",
                  "cards": Array [
                    "5643e2858vpjxd7wjp",
                  ],
                  "title": "Sports Analyst Cambridgeshire",
                },
              }
            }
            cardslistId="2skdde39hzdo08aqcdgd"
            index={0}
          />
        </div>
      </div>
    </li>
    <li>
      <div
        className="create-cards"
      >
        <div
          className="create-cards-link"
        >
          <span
            className="createcards"
            id="createcards"
            name="createcards"
            onClick={[Function]}
            value="Add Cards"
          >
            Add a card...
          </span>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Cards component add cards click snaphot 2`] = `
<div
  className="cards-form"
>
  <ul
    className="cards-list-ul"
  >
    <li
      key="0"
    >
      <div
        className="cards-tile"
      >
        <div
          className="update-card"
        >
          <UpdateCards
            _id="432e39hzdo08aqcdgd"
            cards={
              Object {
                "432e39hzdo08aqcdgd": Object {
                  "_id": "432e39hzdo08aqcdgd",
                  "cardslistId": "2skdde39hzdo08aqcdgd",
                  "text": "eat dinner",
                },
                "5643e2858vpjxd7wjp": Object {
                  "_id": "5643e2858vpjxd7wjp",
                  "cardslistId": "kd5o3ve2858vpjxd7wjp",
                  "text": "masking tape",
                },
                "6532opubteu021ato": Object {
                  "_id": "6532opubteu021ato",
                  "cardslistId": "14w43d4opubteu021ato",
                  "text": "tea tree oil",
                },
              }
            }
            cardslist={
              Object {
                "14w43d4opubteu021ato": Object {
                  "_id": "14w43d4opubteu021ato",
                  "boardId": "346rfdghsdhteu021ato",
                  "cards": Array [
                    "6532opubteu021ato",
                  ],
                  "title": "Bedfordshire Illinois Liaison",
                },
                "2skdde39hzdo08aqcdgd": Object {
                  "_id": "2skdde39hzdo08aqcdgd",
                  "boardId": "46mdujckqs45tkdsh2jdxz",
                  "cards": Array [
                    "432e39hzdo08aqcdgd",
                  ],
                  "title": "XML Health",
                },
                "kd5o3ve2858vpjxd7wjp": Object {
                  "_id": "kd5o3ve2858vpjxd7wjp",
                  "boardId": "kd5o3ve2858qggfqw4rtfda",
                  "cards": Array [
                    "5643e2858vpjxd7wjp",
                  ],
                  "title": "Sports Analyst Cambridgeshire",
                },
              }
            }
            cardslistId="2skdde39hzdo08aqcdgd"
            index={0}
          />
        </div>
      </div>
    </li>
    <li>
      <div
        className="create-cards"
      >
        <ReduxForm
          cardslist={
            Object {
              "_id": "2skdde39hzdo08aqcdgd",
              "boardId": "46mdujckqs45tkdsh2jdxz",
              "cards": Array [
                "432e39hzdo08aqcdgd",
              ],
              "title": "XML Health",
            }
          }
          close={[Function]}
          onSubmit={[Function]}
        />
      </div>
    </li>
  </ul>
</div>
`;

exports[`Cards component cards snapshot 1`] = `
<div
  className="cards-form"
>
  <ul
    className="cards-list-ul"
  >
    <li
      key="0"
    >
      <div
        className="cards-tile"
      >
        <div
          className="update-card"
        >
          <UpdateCards
            _id="432e39hzdo08aqcdgd"
            cards={
              Object {
                "432e39hzdo08aqcdgd": Object {
                  "_id": "432e39hzdo08aqcdgd",
                  "cardslistId": "2skdde39hzdo08aqcdgd",
                  "text": "eat dinner",
                },
                "5643e2858vpjxd7wjp": Object {
                  "_id": "5643e2858vpjxd7wjp",
                  "cardslistId": "kd5o3ve2858vpjxd7wjp",
                  "text": "masking tape",
                },
                "6532opubteu021ato": Object {
                  "_id": "6532opubteu021ato",
                  "cardslistId": "14w43d4opubteu021ato",
                  "text": "tea tree oil",
                },
              }
            }
            cardslist={
              Object {
                "14w43d4opubteu021ato": Object {
                  "_id": "14w43d4opubteu021ato",
                  "boardId": "346rfdghsdhteu021ato",
                  "cards": Array [
                    "6532opubteu021ato",
                  ],
                  "title": "Bedfordshire Illinois Liaison",
                },
                "2skdde39hzdo08aqcdgd": Object {
                  "_id": "2skdde39hzdo08aqcdgd",
                  "boardId": "46mdujckqs45tkdsh2jdxz",
                  "cards": Array [
                    "432e39hzdo08aqcdgd",
                  ],
                  "title": "XML Health",
                },
                "kd5o3ve2858vpjxd7wjp": Object {
                  "_id": "kd5o3ve2858vpjxd7wjp",
                  "boardId": "kd5o3ve2858qggfqw4rtfda",
                  "cards": Array [
                    "5643e2858vpjxd7wjp",
                  ],
                  "title": "Sports Analyst Cambridgeshire",
                },
              }
            }
            cardslistId="2skdde39hzdo08aqcdgd"
            index={0}
          />
        </div>
      </div>
    </li>
    <li>
      <div
        className="create-cards"
      >
        <div
          className="create-cards-link"
        >
          <span
            className="createcards"
            id="createcards"
            name="createcards"
            onClick={[Function]}
            value="Add Cards"
          >
            Add a card...
          </span>
        </div>
      </div>
    </li>
  </ul>
</div>
`;
